fixed dropdown z-index

--- a/modules/home/home.less
+++ b/modules/home/home.less
@@ -13,6 +13,7 @@
     position: relative;
     margin-bottom: 80px;
 }
+
 /*title*/
 h1{
     font-family: @main-font;
@@ -35,4 +36,8 @@ a:hover {
 
 .input-group-btn-fix {
     margin-top: -5px;
+}
+
+.input-group{
+    z-index: -9999;
 }
